force-app/main/default/objects/Inventory__c/fields/Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level__c</fullName>
    <label>Reorder_Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>