force-app/main/default/objects/Inventory__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <formula>IF(
    Stock_Quantity__c &lt; Reorder_Level__c,
    &quot;Low Stock&quot;,
    &quot;In Stock&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock_Status</label>
    <type>Text</type>
</CustomField>