force-app/main/default/objects/Inventory__c/recordTypes/Inventorys.recordType-meta.xml
<RecordType>
    <fullName>Inventorys</fullName>
    <active>true</active>
    <label>Inventorys</label>
</RecordType>