force-app/main/default/objects/Inventory__c/validationRules/Prevent_Stock_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Stock_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Stock_Quantity__c &lt; 0</errorConditionFormula>
    <errorMessage>Stock Quantity cannot be negative.</errorMessage>
</ValidationRule>