force-app/main/default/objects/Inventory__c/validationRules/Show_a_low_stock_alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Show_a_low_stock_alert</fullName>
    <active>false</active>
    <errorConditionFormula>Stock_Quantity__c &lt; Reorder_Level__c</errorConditionFormula>
    <errorDisplayField>Stock_Quantity__c</errorDisplayField>
    <errorMessage>Stock Quantity is less than Reorder Level</errorMessage>
</ValidationRule>